--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -27,38 +27,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></FrameLayout>
 
-            <RelativeLayout
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/header_height">
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/reg_back_cv_id"
-                    android:layout_width="@dimen/header_width"
-                    android:layout_height="@dimen/header_width"
-                    app:cardCornerRadius="@dimen/half_of_the_header_width">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_navigate_back_24dp" />
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/reg_next_cv_id"
-                    android:layout_width="@dimen/header_width"
-                    android:layout_height="@dimen/header_width"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    app:cardCornerRadius="@dimen/half_of_the_header_width">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_navigate_next_24dp" />
-                </android.support.v7.widget.CardView>
-            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
+    <RelativeLayout
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:layout_margin="@dimen/header_height">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/reg_back_cv_id"
+            android:layout_width="@dimen/header_width"
+            android:layout_height="@dimen/header_width"
+            app:cardCornerRadius="@dimen/half_of_the_header_width">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_navigate_back_24dp" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/reg_next_cv_id"
+            android:layout_width="@dimen/header_width"
+            android:layout_height="@dimen/header_width"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            app:cardCornerRadius="@dimen/half_of_the_header_width">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_navigate_next_24dp" />
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
 </RelativeLayout>
