--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -10,41 +11,37 @@
     </data>
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/app_background">
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.avenjr.me.me.ui.views.NavigationHeader
             android:id="@+id/navigationHeader"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/header_height"
-            android:layout_marginBottom="20dp"
-            android:layout_alignParentTop="true">
+            android:layout_height="@dimen/header_height">
         </com.avenjr.me.me.ui.views.NavigationHeader>
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/navigationHeader"
-            android:layout_marginTop="20dp">
-
-            <RelativeLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="330dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="30dp"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintTop_toBottomOf="@id/circleImageView"
+                android:layout_margin="20dp"
                 android:background="@drawable/sign_in_background">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:padding="10dp"
+                    app:layout_constraintBottom_toTopOf="@+id/signIn_btn_submit"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <com.avenjr.me.me.ui.views.CustomEditText
                         android:id="@+id/signIn_et_id"
@@ -55,8 +52,8 @@
                         android:drawablePadding="5dp"
                         android:hint="@string/enter_email"
                         android:imeOptions="actionNext"
-                        android:singleLine="true"
                         android:padding="10dp"
+                        android:singleLine="true"
                         app:addTextChangedListener="@{viewModel.idTextWatcher}" />
 
                     <com.avenjr.me.me.ui.views.CustomEditText
@@ -89,12 +86,14 @@
                     android:id="@+id/signIn_btn_submit"
                     android:layout_width="140dp"
                     android:layout_height="40sp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
                     android:layout_margin="20dp"
+
                     android:onClick="@{viewModel::onLoginClicked}"
                     app:cardBackgroundColor="@color/green"
-                    app:cardCornerRadius="10dp">
+                    app:cardCornerRadius="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -105,49 +104,25 @@
                         android:textSize="15sp"
                         android:textStyle="bold" />
                 </android.support.v7.widget.CardView>
-            </RelativeLayout>
-        </RelativeLayout>
+            </android.support.constraint.ConstraintLayout>
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/circleImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/navigationHeader"
-            android:layout_centerHorizontal="true">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="100dp"
+            app:layout_constraintTop_toBottomOf="@id/navigationHeader"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ImageView
+                android:layout_width="97dp"
                 android:layout_height="100dp"
-                android:src="@drawable/logo_background"
-                app:civ_border_color="@color/appBackgroundDark"
-                app:civ_border_width="3dp" />
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true">
-
-                <TextView
-                    android:id="@+id/logo_first_letter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="M"
-                    android:textColor="@color/white"
-                    android:textSize="50sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="-10dp"
-                    android:layout_marginTop="11dp"
-                    android:layout_toEndOf="@+id/logo_first_letter"
-                    android:layout_toRightOf="@+id/logo_first_letter"
-                    android:text="E"
-                    android:textColor="@color/white"
-                    android:textSize="40sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-        </RelativeLayout>
-    </RelativeLayout>
+                android:padding="10dp"
+                android:src="@mipmap/ic_launcher_foreground"
+                android:background="@drawable/logo_background"
+                android:contentDescription="logo_view" />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </layout>
