--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -29,6 +29,7 @@
                 android:id="@+id/circleImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,8 +50,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                android:layout_margin="20dp"
-                android:background="@drawable/sign_in_background"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="15dp"
+                android:background="@drawable/round_30_app_color_background"
                 app:layout_constraintTop_toBottomOf="@id/circleImageView">
 
                 <LinearLayout
@@ -95,10 +98,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="20dp"
-                        android:background="@color/appBackground"
                         android:padding="10dp"
-                        android:text="@string/forgot_password"
-                        android:textColor="@color/colorAccent"
+                        android:text="@string/forgot_your_email_passwod"
                         android:textSize="15sp"
                         android:textStyle="bold" />
                 </LinearLayout>
