--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="red"> #FF0000</color>
     <color name="black">#404040</color>
     <color name="black_transparent">#a000</color>
+    <color name="fent_red">#ff8080</color>
 </resources>
