--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -4,7 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.NavigationActivity"
-    android:background="@drawable/app_background">
+    android:background="@drawable/app_background"
+    tools:context=".ui.activity.NavigationActivity">
+
+    <com.avenjr.me.me.ui.adapters.NavigationViewPager
+        android:id="@+id/navigation_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation">
+    </com.avenjr.me.me.ui.adapters.NavigationViewPager>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_above="@id/bottom_navigation"
+        android:background="@color/appBackgroundDark" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_height"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:baselineAligned="false">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/navigation_home_layout"
+                android:layout_width="@dimen/header_height"
+                android:layout_height="match_parent"
+                android:background="@drawable/navigation_circle"
+                android:padding="1dp"
+                android:src="@mipmap/ic_hone_non_active_round"
+                android:layout_centerHorizontal="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/header_height"
+            android:layout_weight="1">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/navigation_friends_layout"
+                android:layout_width="@dimen/header_height"
+                android:layout_height="match_parent"
+                android:background="@drawable/navigation_circle"
+                android:padding="5dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/navigation_home_non_active" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/header_height"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/navigation_profile_layout"
+                android:layout_width="@dimen/header_height"
+                android:layout_height="match_parent"
+                android:background="@drawable/navigation_circle"
+                android:padding="1dp"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/ic_profile_non_active" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"></RelativeLayout>
 
 </RelativeLayout>
